3744.	[experimental]	SIT: send and process Source Identity Tokens
			(similar to DNS Cookies by Donald Eastlake 3rd),
			which are designed to help clients detect off-path
			spoofed responses and for servers to identify
                        legitimate clients.

			SIT uses an experimental EDNS option code (65001).
			[This will be changed to a IANA assigned value if
			 the experiment is deemed a success.]

			SIT can be enabled via "configure --enable-sit" (or
			--enable-developer). It is enabled by default in
                        Windows.

                        Servers can be configured to send smaller responses
                        to clients that have not identified themselves via
                        SIT.  RRL processing has also been updated;
                        legitimate clients are not subject to rate
                        limiting. [RT #35389]
			
3743.	[bug]		delegation-only flag wasn't working in forward zone
			declarations despite being documented.  This is
			needed to support turning off forwarding and turning
			on delegation only at the same name.  [RT #35392]

3742.	[port]		linux: libcap support: declare curval at start of
			block. [RT #35387]

3741.	[func]		"delve" (domain entity lookup and validation engine):
			A new tool with dig-like semantics for performing DNS
			lookups, with internal DNSSEC validation, using the
			same resolver and validator logic as named. This
			allows easy validation of DNSSEC data in environments
			with untrustworthy resolvers, and assists with
			troubleshooting of DNSSEC problems. (Note: not yet
			available on win32.) [RT #32406]

3740.	[contrib]	Minor fixes to configure --with-dlz-bdb,
			--with-dlz-postgres and --with-dlz-odbc. [RT #35340]

3739.	[func]		Added per-zone stats counters to track TCP and
			UDP queries. [RT #35375]

3738.	[bug]		--enable-openssl-hash failed to build. [RT #35343]

3737.	[bug]		'rndc retransfer' could trigger a assertion failure